<resources>
    <string name="app_name">牙科论坛</string>

    <string name="add_post">写帖子</string>

    <string name="exit_text">再按一次退出</string>

    <string name="fragment_recommend">推荐</string>
    <string name="fragment_post">论坛</string>
    <string name="fragment_user">我的</string>

    <string name="home_setup">设置</string>
    <string name="home_search">搜索</string>

    <string name="login_title">登录</string>

    <string name="login_username">手机号码/用户名</string>
    <string name="login_password">请输入账号密码</string>

    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码?</string>

    <string name="login_username_error">用户名不能为空</string>
    <string name="login_password_error">密码不能为空</string>

    <string name="password_length_error">密码长度不能小于6位</string>

    <string name="navigatesigin_login">登录</string>
    <string name="navigatesigin_register">注册</string>
    <string name="navigatesigin_forget">忘记密码?</string>
    <string name="navigatesigin_other">其他登录</string>
    <string name="navigatesigin_qq">QQ账号登录</string>
    <string name="navigatesigin_sina">微博账号登录</string>
    <string name="navigatesigin_wechat">微信账号登录</string>

    <string name="register_title">注册</string>

    <string name="register_tel_arear">中国(+86)</string>
    <string name="register_tel_hint">输入手机号码</string>
    <string name="next_step">下一步</string>

    <string name="register_tel_error">电话号码不能为空</string>
    <string name="register_tel_format_error">电话号码格式不正确</string>

    <string name="register_next_a">已发送一条带验证码的短信至</string>
    <string name="register_submit">注册</string>
    <string name="send_coding">正在获取</string>
    <string name="send_code">重新获取</string>

    <string name="input_code_hint">请输入验证码</string>
    <string name="input_passowrd_hint">请输入密码</string>

    <string name="code_null_error">验证码不能为空</string>
    <string name="code_error">验证码不正确</string>

    <string name="transfer_tel">value_tel</string>
    <string name="register_back_title">确定重新开始注册</string>
    <string name="register_back_subtitle">短信接收可能需要一段时间，确定要返回重新开始注册吗</string>
    <string name="register_back_cancel">取消</string>
    <string name="register_back_deal">重新开始</string>

    <string name="search_hint">搜索你感兴趣的内容</string>
    <string name="search_null_hint">请输入搜索内容</string>

    <string name="search_default_hot">热门搜索</string>
    <string name="search_default_history">搜索记录</string>
    <string name="search_default_history_clear">清空历史记录</string>

    <string name="user_sigin_hint">登录查看更多信息</string>
    <string name="user_sigin_integration">积分：</string>

    <string name="user_post">帖子</string>
    <string name="user_wealth">财富</string>
    <string name="user_collection">收藏</string>

    <string name="sign_out">退出当前账号</string>

    <string name="post_them_title">选择版块</string>
    <string name="post_them_deal">确定</string>
    <string name="post_content_title">发表主题</string>
    <string name="post_content_cancel">取消</string>
    <string name="post_content_submit">发表</string>
    <string name="post_content_hint_title">输入标题</string>
    <string name="post_content_hint_content">输入正文</string>
    <string name="post_content_null_title_error">请输入标题</string>
    <string name="post_content_null_content_error">请输入正文</string>
    <string name="post_content_post_success">发表成功</string>
    <string name="post_cancel_title">退出发帖</string>
    <string name="post_cancel_content">你的帖子还没有提交，退出后内容将会清空</string>
    <string name="post_cancel_cancel">取消</string>
    <string name="post_cancel_deal">确定</string>

    <string name="menu_string_refresh">刷新</string>
    <string name="menu_string_collect">收藏</string>

    <string name="post_detail_comment_hint">写评论</string>
    <string name="post_detail_header_landlord">楼主</string>
    <string name="post_detail_header_comment">全部评论</string>

    <string name="post_detail_reply"><Data>
        <![CDATA[
        <font color="#74BFF3">%1$s</font>
        回复
        <font color="#74BFF3">%2$s</font>
        :
        ]]>
    </Data></string>

    <string name="send_code_string">
        正在获取
        (
        %1$s
        )

    </string>

    <string name="post_detail_comment_submit">回复</string>
    <string name="post_detail_reply_null_error">请输入内容</string>

    <string name="post_detail_opera_reply">回复</string>
    <string name="post_detail_opera_delete">删除</string>

    <string name="post_reply_bean">post_reply_bean</string>

    <string name="user_info_title">个人中心</string>
    <string name="user_info_protrait">头像</string>
    <string name="user_info_name">用户名</string>

    <string name="user_posts_title">我的帖子</string>
    <string name="user_collection_title">我的收藏</string>

    <string name="post_id">post_id</string>
    <string name="post_title">post_title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fail">用户名/密码错误</string>
    <string name="register_fail">注册失败</string>
</resources>
