<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jqchen.dentalforum.navigatesigin.NavigateSiginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="144dp"
            android:drawablePadding="@dimen/dp_14"
            android:drawableTop="@mipmap/ic_launcher"
            android:text="@string/app_name"
            android:textColor="@color/text_color_4d"
            android:textSize="@dimen/sp_17" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/navigationsigin_login"
                style="@style/frame_submit"
                android:layout_marginLeft="@dimen/dp_36"
                android:layout_marginRight="@dimen/dp_36"
                android:background="@drawable/login_submit_bg"
                android:text="@string/navigatesigin_login"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/navigationsigin_register"
                style="@style/frame_submit"
                android:layout_marginLeft="@dimen/dp_36"
                android:layout_marginRight="@dimen/dp_36"
                android:layout_marginTop="@dimen/dp_22"
                android:background="@drawable/navigatesigin_submit_bg"
                android:text="@string/navigatesigin_register"
                android:textColor="@color/them_color" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="44dp">

                <TextView
                    android:id="@+id/navigationsigin_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/navigatesigin_other"
                    android:textColor="@color/navigatesigin_color"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/navigationsigin_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@id/navigationsigin_other"
                    android:layout_toStartOf="@id/navigationsigin_other"
                    android:text="@string/navigatesigin_forget"
                    android:textColor="@color/navigatesigin_color"
                    android:textSize="@dimen/sp_12" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:background="@android:color/white"
        android:id="@+id/navigationsigin_other_sigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
