<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jqchen.dentalforum.post.post.content.PostContentActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/post_content_toolbar"
            style="@style/frame_toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.AppBarOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/post_content_cancel"
                    style="@style/post_content_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/post_content_cancel" />

                <TextView
                    style="@style/frame_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_content_title" />

                <TextView
                    android:id="@+id/post_content_submit"
                    style="@style/post_content_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/post_content_submit" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/them_bg_color"
            android:orientation="vertical"
            app:divider="@drawable/divider_vertical"
            app:showDividers="middle">

            <EditText
                android:id="@+id/post_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@android:color/transparent"
                android:hint="@string/post_content_hint_title"
                android:inputType="textWebEditText"
                android:textColor="@color/text_color_4d"
                android:textColorHint="@color/text_color_cc"
                android:textSize="@dimen/sp_13" />

            <EditText
                android:id="@+id/post_content_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@android:color/transparent"
                android:hint="@string/post_content_hint_content"
                android:inputType="text"
                android:textColor="@color/text_color_4d"
                android:textColorHint="@color/text_color_cc"
                android:textSize="@dimen/sp_13" />

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
