<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".user.register.RegisterFragment">

    <ViewStub
        android:id="@+id/network_error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/network_error" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_bg_gray_dp_4"
        android:orientation="vertical"
        app:divider="@drawable/divider_vertical"
        app:showDividers="middle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_margin="@dimen/dp_4"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_4"
            android:paddingStart="@dimen/dp_4"
            android:text="@string/register_tel_arear"
            android:textColor="@color/text_color_4d"
            android:textSize="@dimen/sp_13" />

        <jqchen.dentalforum.widget.ClearableEditText
            android:id="@+id/regiser_tel"
            style="@style/frame_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_margin="@dimen/dp_4"
            android:background="@android:color/white"
            android:hint="@string/register_tel_hint"
            android:inputType="phone"
            android:maxLength="@integer/phone_length" />

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/register_next"
        style="@style/frame_submit"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/login_submit_bg"
        android:text="@string/next_step"
        android:textColor="@android:color/white" />


</android.support.v7.widget.LinearLayoutCompat>
