<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_post_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_user_default" />

        <TextView
            android:id="@+id/item_post_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_toEndOf="@id/item_post_image"
            android:layout_toRightOf="@id/item_post_image"
            android:text="@string/add_post"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/item_post_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/item_post_name"
            android:layout_alignStart="@id/item_post_name"
            android:layout_below="@id/item_post_name"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/code_error"
            android:textColor="@color/text_color_cc"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/item_post_them"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/corner_bg_gray_dp_10"
            android:paddingBottom="@dimen/dp_2"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:paddingTop="@dimen/dp_2"
            android:text="@string/add_post"
            android:textColor="@color/text_color_99"
            android:textSize="@dimen/sp_12" />

    </RelativeLayout>

    <TextView
        android:id="@+id/item_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22"
        android:text="@string/register_back_subtitle"
        android:textColor="@color/text_color_4d"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/item_post_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/register_back_subtitle"
        android:textColor="@color/text_color_80"
        android:textSize="@dimen/sp_13" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/item_post_recycler"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="刚刚"
            android:textColor="@color/text_color_cc"
            android:textSize="@dimen/sp_10" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:src="@drawable/icon_view_num" />

        <TextView
            android:id="@+id/item_post_viewnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textColor="@color/text_color_cc"
            android:textSize="@dimen/sp_10" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:src="@drawable/icon_comment_num" />

        <TextView
            android:id="@+id/item_post_commentnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="111"
            android:textColor="@color/text_color_cc"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

</LinearLayout>