<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jqchen.dentalforum.search.SearchDefaultFragment">

    <!-- TODO: Update blank fragment layout -->

    <ViewStub
        android:id="@+id/network_error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/network_error" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/them_bg_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    app:divider="@drawable/divider_vertical"
                    app:showDividers="middle">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_8">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/search_default_hot"
                            android:textColor="@color/text_color_80"
                            android:textSize="@dimen/sp_13" />

                        <ImageView
                            android:id="@+id/search_default_hot_refresh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/search_default_refresh" />
                    </RelativeLayout>

                    <com.zhy.view.flowlayout.FlowLayout
                        android:id="@+id/search_default_hot_flowlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8" />

                </android.support.v7.widget.LinearLayoutCompat>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/white">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    app:divider="@drawable/divider_vertical"
                    app:showDividers="middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_8"
                        android:text="@string/search_default_history"
                        android:textColor="@color/text_color_80"
                        android:textSize="@dimen/sp_13" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/search_default_history_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/search_default_history_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dp_8"
                        android:text="@string/search_default_history_clear"
                        android:textColor="@color/text_color_80"
                        android:textSize="@dimen/sp_14" />

                </android.support.v7.widget.LinearLayoutCompat>
            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
